# calsync

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum
cmd/calsync/: cli_test.go  cmd_accounts.go  cmd_appserver.go  cmd_auth.go  cmd_doctor.go  cmd_reconcile.go  cmd_run.go  cmd_status.go  cmd_sync.go  main.go
desktop/: index.html  package-lock.json  package.json
desktop/scripts/: build-sidecar.sh
desktop/src/: App.tsx  PanelApp.tsx  api.test.ts  api.ts  main.tsx  maintenance.test.ts  maintenance.ts  panelWindow.ts  panelapp.test.ts  panelwindow.test.ts  sidecar.ts  styles.css  tray.test.ts  tray.ts  types.ts  updater.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: desktop-release-runbook.md
internal/appserver/: authflow.go  authflow_test.go  calendars.go  calendars_test.go  confighttp.go  confighttp_test.go  containerguard_test.go  daemon.go  daemon_test.go  doctorhttp.go  doctorhttp_test.go  events.go  events_test.go  maintenance.go  maintenance_test.go  server.go  server_test.go  status.go  yamledit.go  yamledit_test.go
internal/auth/: flow.go  flow_test.go  tokens.go  tokens_test.go
internal/clients/: clients.go  clients_test.go
internal/config/: config.go  config_test.go
internal/doctor/: doctor.go  doctor_test.go
internal/engine/: classify.go  classify_test.go  collectwindow_test.go  dedupe.go  dedupe_test.go  engine.go  engine_test.go  errors.go  (+7 more)
scripts/: release-desktop.sh
(+71 files in other folders)
