[package]
name = "calsync-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[lib]
name = "calsync_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
