[package]
name = "calsync-desktop"
version = "0.2.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1"

[lib]
name = "calsync_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
